--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -144,6 +144,7 @@ bind = Super+Ctrl,          E,          exec, emacsclient --create-frame --no-wa
 bind = Super+Ctrl,          S,          exec, hyprshot -m window
 bind = Super+Ctrl+Shift,    S,          exec, hyprshot -m region
 bind = Super,               slash,      exec, firefox --new-window ~/.config/hypr/keybindings.html
+bind = Super+Ctrl,          slash,      exec, imv -s full -w "Meow Keybindings" ~/dotfiles/emacs/keymap_meow.svg
 
 # Window resizing.
 binde = Super+Ctrl,         A,          resizeactive, -20   0
@@ -187,10 +188,15 @@ windowrulev2    = float,                        class:^(kitty)$, title:^(scratch
 windowrulev2    = size 50% 50%,                 class:^(kitty)$, title:^(scratchpad)$
 windowrulev2    = center,                       class:^(kitty)$, title:^(scratchpad)$
 
-# The Hyprland keybindings cheatsheet.
+# Popup window with the Hyprland keybindings cheatsheet.
 # Note that these rules to make the window float don’t currently work. AIUI,
 # this is due to how Firefox sets the window title. Nevertheless, I’ll leave the
 # rules here in case it happens to start working one day.
 windowrulev2    = float,        class:^(firefox)$, title:^(Hyprland Keybindings Reference)
 windowrulev2    = size 60% 80%, class:^(firefox)$, title:^(Hyprland Keybindings Reference)
 windowrulev2    = center,       class:^(firefox)$, title:^(Hyprland Keybindings Reference)
+
+# Popup window with the Meow keybindings cheatsheet.
+windowrulev2    = float,        class:^(imv)$, title:^(Meow Keybindings)$
+windowrulev2    = size 40% 40%, class:^(imv)$, title:^(Meow Keybindings)$
+windowrulev2    = center,       class:^(imv)$, title:^(Meow Keybindings)$
