--- a/vale/.config/vale/.vale.ini
+++ b/vale/.config/vale/.vale.ini
@@ -7,6 +7,8 @@ Packages = write-good, proselint, Microsoft
 [*]
 Vale.Spelling = NO
 write-good.E-Prime = NO
+Microsoft.Dashes = NO
+Microsoft.Vocab = NO
 
 [*.md]
 BasedOnStyles = Vale, write-good, proselint, Microsoft
