kitty: generally improve config
Some general tweaks. Ideas from:
https://www.youtube.com/watch?v=ftHfRmtqDTU&t=4795s

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,28 +1,22 @@
-font_family             JetBrains Mono Medium
-bold_font               JetBrains Mono Bold
-italic_font             JetBrains Mono Italic
-bold_italic_font        JetBrains Mono Bold Italic
-
+font_family             JetBrainsMono Nerd Font Mono
 font_size               11.5
 
-# Disable ligatures (can blur with astigmatism)
-disable_ligatures       always
-
-# Font features
-# modify_font             cell_height 110%
-
-# Cursor
 cursor_shape            block
 
-# Half the line-height (9 * 110% / 2):
 window_padding_width    6
 
-# URL handling
-url_color               #268bd2
+# Be more compatible with a tiling window manager:
+remember_window_size    no
+
 url_style               single
 
-# Clipboard
-copy_on_select          yes
+# Hide the scrollbar:
+scrollbar_handle_opacity        0
+scrollbar_track_opacity         0
+scrollbar_track_hover_opacity   0
+
+# Reduce the chance of input latency:
+sync_to_monitor         no
 
 # Load the theme.
 include solarized-light.conf
