Update hyprland, hyprpaper for v0.53

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -172,31 +172,31 @@ bind = Super+Shift,         Escape,     exit
 # WINDOW RULES
 #
 
-windowrulev2    = suppressevent maximize, class:.*
+windowrule      = match:class .*, suppress_event maximize
 
-windowrulev2    = workspace 3, class:^(obsidian)$
+windowrule      = match:class ^(obsidian)$, workspace 3
 
 # GoldenDict popup: float and centre.
-windowrulev2    = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-windowrulev2    = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-windowrulev2    = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrule      = match:class .*goldendict_ng$, match:title .* - GoldenDict-ng$, float on
+windowrule      = match:class .*goldendict_ng$, match:title .* - GoldenDict-ng$, center on
+windowrule      = match:class .*goldendict_ng$, match:title .* - GoldenDict-ng$, size 800 600
 
 # Move a terminal with the class "scratchpad" to the special workspace. The
 # "magic" tag corresponds to the keybinding above.
-windowrulev2    = workspace special:magic,      class:^(kitty)$, title:^(scratchpad)$
-windowrulev2    = float,                        class:^(kitty)$, title:^(scratchpad)$
-windowrulev2    = size 50% 50%,                 class:^(kitty)$, title:^(scratchpad)$
-windowrulev2    = center,                       class:^(kitty)$, title:^(scratchpad)$
+windowrule      = match:class ^(kitty)$, match:title ^(scratchpad)$, workspace special:magic
+windowrule      = match:class ^(kitty)$, match:title ^(scratchpad)$, float on
+windowrule      = match:class ^(kitty)$, match:title ^(scratchpad)$, size 50% 50%
+windowrule      = match:class ^(kitty)$, match:title ^(scratchpad)$, center on
 
 # Popup window with the Hyprland keybindings cheatsheet.
 # Note that these rules to make the window float don’t currently work. AIUI,
 # this is due to how Firefox sets the window title. Nevertheless, I’ll leave the
 # rules here in case it happens to start working one day.
-windowrulev2    = float,        class:^(firefox)$, title:^(Hyprland Keybindings Reference)
-windowrulev2    = size 60% 80%, class:^(firefox)$, title:^(Hyprland Keybindings Reference)
-windowrulev2    = center,       class:^(firefox)$, title:^(Hyprland Keybindings Reference)
+windowrule      = match:class ^(firefox)$, match:title ^(Hyprland Keybindings Reference), float on
+windowrule      = match:class ^(firefox)$, match:title ^(Hyprland Keybindings Reference), size 60% 80%
+windowrule      = match:class ^(firefox)$, match:title ^(Hyprland Keybindings Reference), center on
 
 # Popup window with the Meow keybindings cheatsheet.
-windowrulev2    = float,        class:^(imv)$, title:^(Meow Keybindings)$
-windowrulev2    = size 40% 40%, class:^(imv)$, title:^(Meow Keybindings)$
-windowrulev2    = center,       class:^(imv)$, title:^(Meow Keybindings)$
+windowrule      = match:class ^(imv)$, match:title ^(Meow Keybindings)$, float on
+windowrule      = match:class ^(imv)$, match:title ^(Meow Keybindings)$, size 40% 40%
+windowrule      = match:class ^(imv)$, match:title ^(Meow Keybindings)$, center on
