--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,4 @@
-preload = ~/.config/wallpapers/wallpaper-solarized.png
-wallpaper = , ~/.config/wallpapers/wallpaper-solarized.png
+wallpaper {
+    monitor     = DP-1
+    path        = ~/.config/wallpapers/wallpaper-solarized.png
+}
